Plantillas base y conexion a base de datos

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,12 +1,12 @@
 {
-  "name": "Contactos",
+  "name": "Store",
   "integrations": {
     "cordova": {}
   },
   "type": "ionic-angular",
   "proxies": [
     {
-      "path": "/Contactos",
+      "path": "/Store",
       "proxyUrl": "http://127.0.0.1:5000"
     }
   ]
